--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>HTML</title>
+  <title>MI SITIO WEB</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <p>Esta página web es una página HTML válida.</p>
+  <p>Este es un sitio web de prueba publicado en GitHub.</p>
 </body>
 </html>
