--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 
 <body>
-  <p>Este es un sitio web de prueba publicado en GitHub.</p>
+  <p>Este es un sitio web de prueba publicado en GitHub con CSS.</p>
 </body>
 </html>
